--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.7",
+    "inversify": "^6.0.1",
     "next": "13.4.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.1",
+    "reflect-metadata": "^0.1.13",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
   }
